--- a/trunk/src/WaveletStudio.MainApplication/Properties/Resources.pt-BR.resx
+++ b/trunk/src/WaveletStudio.MainApplication/Properties/Resources.pt-BR.resx
@@ -117,77 +117,55 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
-    <value>283, 301</value>
+  <data name="All" xml:space="preserve">
+    <value>Tudo</value>
   </data>
-  <data name="&gt;&gt;PropertyGrid.Type" xml:space="preserve">
-    <value>System.Windows.Forms.PropertyGrid, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="Attention" xml:space="preserve">
+    <value>Atenção</value>
   </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>Qios.DevSuite.Components.QDockingWindow, Qios.DevSuite.Components, Version=4.0.0.20, Culture=neutral, PublicKeyToken=3cc53827b79c92fa</value>
+  <data name="Error" xml:space="preserve">
+    <value>Erro</value>
   </data>
-  <data name="PropertyGrid.Size" type="System.Drawing.Size, System.Drawing">
-    <value>283, 285</value>
+  <data name="FileCouldntBeOpened" xml:space="preserve">
+    <value>O arquivo não pôde ser aberto</value>
   </data>
-  <data name="&gt;&gt;PropertyGrid.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="FileCouldntBeSaved" xml:space="preserve">
+    <value>O arquivo não pôde ser salvo</value>
   </data>
-  <data name="&gt;&gt;PropertyGrid.ZOrder" xml:space="preserve">
-    <value>0</value>
+  <data name="Help" xml:space="preserve">
+    <value>Ajuda</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="PropertyGrid.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Fill</value>
+  <data name="HelpLinkMessage" xml:space="preserve">
+    <value>Para ver a documentação ou obter ajuda acesse o site</value>
   </data>
-  <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>DiagramFormProperties</value>
+  <data name="ModelThrewStackOverflow" xml:space="preserve">
+    <value>O modelo gerou um erro de estouro de pilha.</value>
   </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="PropertyGrid.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
+  <data name="NewDocument" xml:space="preserve">
+    <value>Novo Documento</value>
   </data>
-  <data name="PropertyGrid.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 0</value>
+  <data name="NewDocumentChar" xml:space="preserve">
+    <value>*</value>
   </data>
-  <data name="&gt;&gt;PropertyGrid.Name" xml:space="preserve">
-    <value>PropertyGrid</value>
+  <data name="Output" xml:space="preserve">
+    <value>Saída</value>
   </data>
-  <data name="$this.Text" xml:space="preserve">
-    <value>Properties</value>
+  <data name="PreviousSize" xml:space="preserve">
+    <value>Tamanho Anterior</value>
   </data>
-  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        AAABAAEAEBAAAAAAAABoBQAAFgAAACgAAAAQAAAAIAAAAAEACAAAAAAAAAEAAAAAAAAAAAAAAAEAAAAB
-        AAAAAAAAAACAAACAAAAAgIAAgAAAAIAAgACAgAAAwMDAAMDcwADwyqYABAQEAAgICAAMDAwAERERABYW
-        FgAcHBwAIiIiACkpKQBVVVUATU1NAEJCQgA5OTkAgHz/AFBQ/wCTANYA/+zMAMbW7wDW5+cAkKmtAAAA
-        MwAAAGYAAACZAAAAzAAAMwAAADMzAAAzZgAAM5kAADPMAAAz/wAAZgAAAGYzAABmZgAAZpkAAGbMAABm
-        /wAAmQAAAJkzAACZZgAAmZkAAJnMAACZ/wAAzAAAAMwzAADMZgAAzJkAAMzMAADM/wAA/2YAAP+ZAAD/
-        zAAzAAAAMwAzADMAZgAzAJkAMwDMADMA/wAzMwAAMzMzADMzZgAzM5kAMzPMADMz/wAzZgAAM2YzADNm
-        ZgAzZpkAM2bMADNm/wAzmQAAM5kzADOZZgAzmZkAM5nMADOZ/wAzzAAAM8wzADPMZgAzzJkAM8zMADPM
-        /wAz/zMAM/9mADP/mQAz/8wAM///AGYAAABmADMAZgBmAGYAmQBmAMwAZgD/AGYzAABmMzMAZjNmAGYz
-        mQBmM8wAZjP/AGZmAABmZjMAZmZmAGZmmQBmZswAZpkAAGaZMwBmmWYAZpmZAGaZzABmmf8AZswAAGbM
-        MwBmzJkAZszMAGbM/wBm/wAAZv8zAGb/mQBm/8wAzAD/AP8AzACZmQAAmTOZAJkAmQCZAMwAmQAAAJkz
-        MwCZAGYAmTPMAJkA/wCZZgAAmWYzAJkzZgCZZpkAmWbMAJkz/wCZmTMAmZlmAJmZmQCZmcwAmZn/AJnM
-        AACZzDMAZsxmAJnMmQCZzMwAmcz/AJn/AACZ/zMAmcxmAJn/mQCZ/8wAmf//AMwAAACZADMAzABmAMwA
-        mQDMAMwAmTMAAMwzMwDMM2YAzDOZAMwzzADMM/8AzGYAAMxmMwCZZmYAzGaZAMxmzACZZv8AzJkAAMyZ
-        MwDMmWYAzJmZAMyZzADMmf8AzMwAAMzMMwDMzGYAzMyZAMzMzADMzP8AzP8AAMz/MwCZ/2YAzP+ZAMz/
-        zADM//8AzAAzAP8AZgD/AJkAzDMAAP8zMwD/M2YA/zOZAP8zzAD/M/8A/2YAAP9mMwDMZmYA/2aZAP9m
-        zADMZv8A/5kAAP+ZMwD/mWYA/5mZAP+ZzAD/mf8A/8wAAP/MMwD/zGYA/8yZAP/MzAD/zP8A//8zAMz/
-        ZgD//5kA///MAGZm/wBm/2YAZv//AP9mZgD/Zv8A//9mACEApQBfX18Ad3d3AIaGhgCWlpYAy8vLALKy
-        sgDX19cA3d3dAOPj4wDq6uoA8fHxAPj4+ADw+/8ApKCgAICAgAAAAP8AAP8AAAD//wD/AAAA/wD/AP//
-        AAD///8AAAAAAAAAAAAAAAAAAAAAABMTExMTExMTExMTEwAAAAAT/////////////xMAAAAAE/8TE/8T
-        ExMTE/8TAAAAABP/////////////EwAAAAAT/xMT/xMTExMT/xMAAAAAE/////////////8TAAAAABP/
-        ////////E///EwAAAAAT/xMT////E/AT/xMAAACGE/8T8BP/E/AT8BMTEwCGhhP//xPwE/AT8BPw8PAT
-        hoYTExMTE/AT8BPw8PDw8IaGAAAAAAAT8BPw8PDw8PCGhgAAAAAAABPw8PDw8PAThoYAAAAAAAAAExMT
-        ExMThoYAAAAAAAAAAAAAAAAAAAAAAP//AAAADwAAAA8AAAAPAAAADwAAAA8AAAAPAAAADwAAAA4AAAAE
-        AAAAAAAAAAAAAPgAAAD8AAAA/gEAAP//AAA=
-</value>
+  <data name="SaveChangesQuestion" xml:space="preserve">
+    <value>Você gostaria de salvar as alterações antes de fechar o documento?</value>
   </data>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="$this.Language" type="System.Globalization.CultureInfo, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>pt-BR</value>
-  </metadata>
+  <data name="Signal" xml:space="preserve">
+    <value>Sinal</value>
+  </data>
+  <data name="Site" xml:space="preserve">
+    <value>http://www.waveletstudio.net</value>
+  </data>
+  <data name="WaveletStudio" xml:space="preserve">
+    <value>Wavelet Studio</value>
+  </data>
+  <data name="WaveletStudioDocument" xml:space="preserve">
+    <value>Documento do Wavelet Studio</value>
+  </data>
 </root>
