--- a/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
+++ b/trunk/src/WaveletStudio.MainApplication/Properties/Resources.resx
@@ -545,4 +545,55 @@ Click in the Signal tab and select a signal source.</value>
   <data name="iconclose" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconclose.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="All" xml:space="preserve">
+    <value>All</value>
+  </data>
+  <data name="Output" xml:space="preserve">
+    <value>Output</value>
+  </data>
+  <data name="PreviousSize" xml:space="preserve">
+    <value>Previous Size</value>
+  </data>
+  <data name="Signal" xml:space="preserve">
+    <value>Signal</value>
+  </data>
+  <data name="Attention" xml:space="preserve">
+    <value>Attention</value>
+  </data>
+  <data name="Error" xml:space="preserve">
+    <value>Error</value>
+  </data>
+  <data name="FileCouldntBeOpened" xml:space="preserve">
+    <value>The file couldn't be opened</value>
+  </data>
+  <data name="FileCouldntBeSaved" xml:space="preserve">
+    <value>The file couldn't be saved</value>
+  </data>
+  <data name="Help" xml:space="preserve">
+    <value>Help</value>
+  </data>
+  <data name="HelpLinkMessage" xml:space="preserve">
+    <value>You can get help in this application at the folowing site</value>
+  </data>
+  <data name="ModelThrewStackOverflow" xml:space="preserve">
+    <value>The model threw a stack overflow exception</value>
+  </data>
+  <data name="NewDocument" xml:space="preserve">
+    <value>New Document</value>
+  </data>
+  <data name="NewDocumentChar" xml:space="preserve">
+    <value>*</value>
+  </data>
+  <data name="SaveChangesQuestion" xml:space="preserve">
+    <value>Would you like to save your changes before closing?</value>
+  </data>
+  <data name="Site" xml:space="preserve">
+    <value>http://www.waveletstudio.net</value>
+  </data>
+  <data name="WaveletStudio" xml:space="preserve">
+    <value>Wavelet Studio</value>
+  </data>
+  <data name="WaveletStudioDocument" xml:space="preserve">
+    <value>Wavelet Studio Document</value>
+  </data>
 </root>
