--- a/trunk/src/WaveletStudio.MainApplication/Forms/DiagramFormMainMenu.pt-BR.resx
+++ b/trunk/src/WaveletStudio.MainApplication/Forms/DiagramFormMainMenu.pt-BR.resx
@@ -3569,81 +3569,39 @@
   <data name="PrintPreviewMenuItem.Title" xml:space="preserve">
     <value>Pré-visualização</value>
   </data>
-  <data name="PublishMenuItem.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="OptionsMenuItem.HotkeyText" xml:space="preserve">
+    <value>Ç</value>
+  </data>
+  <data name="OptionsMenuItem.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAZ2dnCGdnZxhnZ2cgZ2dnIGdn
-        ZyBnZ2cgZ2dnIGdnZyBnZ2cgZ2dnIGdnZyBnZ2cgZ2dnIGdnZyBnZ2cgZ2dnIGdnZyBnZ2cgZ2dnIGdn
-        ZyBnZ2cYZ2dnCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABnZ2cYZ2dnSGdn
-        Z2BnZ2dgZ2dnYGdnZ2BnZ2dgZ2dnYGdnZ2BnZ2dgZ2dnYGdnZ2BnZ2dgZ2dnYGdnZ2BnZ2dgZ2dnYGdn
-        Z2BnZ2dgZ2dnYGdnZ0hnZ2cYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALfW
-        t/84mjf/OJo3/ziaN/84mjf/OJo3/4SEhP+CgoL/goKC/4KCgv+CgoL/goKC/4KCgv+CgoL/OJo3/zia
-        N/84mjf/OJo3/ziaN/+GuIb/Z2dnYGdnZyAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAULJO/1nFZP9k13f/ZNd3/2TXd/9k13f/gICA/7q5uf+6ubn/yMjH/7Gxsf+hoaH/oaGh/3p6
-        ev9k13f/ZNd3/2TXd/9k13f/WcVk/ziaN/9nZ2dgZ2dnIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAABTt1P/kuWe/7rzwf+688H/uvPB/7rzwf+JiYn/2tra/9ra2v/q6ur/urm5/5yc
-        nP+YmJj/enp6/7rzwf+688H/uvPB/7rzwf+p6K//OJo3/2dnZ0hnZ2cYAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAMXkxv9TuFX/UrVR/1K1Uf9StVH/UrVR/6alpv+jo6P/trW2/9rZ
-        2v+5ubr/n5+f/4mJif+IiIj/UrVR/1K1Uf9StVH/UrVR/1CyTv+92L3/Z2dnGGdnZwgAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AACUk5T/2trZ/7m5uf+Uk5T/Z2dnYGdnZyAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABnZ2cIZ2dnGGdnZyBnZ2cgZ2dnIGdn
-        ZyBnZ2cgZ2dnIHx8fP/a2dn/ubq5/3x8fP9nZ2doZ2dnOGdnZyBnZ2cgZ2dnIGdnZyBnZ2cYZ2dnCAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAZ2dnCGdnZxhnZ2cgZ2dnGGdnZyBnZ2dIZ2dnYGdn
-        Z2BnZ2dgZ2dnYGdnZ2BnZ2dgfHx8/9ra2f+6ubr/fHx8/2dnZ3hnZ2doZ2dnYGdnZ2BnZ2dgZ2dnYGdn
-        Z1BnZ2coZ2dnCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABnZ2cQZ2dnMGdnZ0BnZ2cwjK/P/16I
-        rf9eiK3/Xoit/16Irf9eiK3/Xomu/12Kr/9di7D/XI20/1uOtf9akLf/WpG5/1mSu/9YlL3/WJW+/1iV
-        vv9Ylb7/Z2dneGdnZ1hnZ2coZ2dnCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMSpmf/ApJT/vJ6N/2dn
-        Zxh5m8X/ebLU/6Pj/P980fb/Ysbx/2LF8P9ixvD/YsXx/2LG8f9ixvH/Ysbw/2LF8f9ixfH/YsXx/2LG
-        8f9ixfD/YsXx/2DD7v9Yf6f/Z2dneGdnZ1BnZ2cYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAZ2dnCGdn
-        ZxhnZ2cgZ2dnGHmdx/+Ex+P/frTW/6rm/v9oyfP/Zcfx/2XH8v9lx/L/Zcfy/2XH8v9lx/L/Zcfy/2XH
-        8v9lx/L/Zcjy/2XH8v9lyPL/Zcfy/1uw2v+aqr7/Z2dnaGdnZzBnZ2cIAAAAAAAAAAAAAAAAAAAAAAAA
-        AABnZ2cQZ2dnMGdnZ0BnZ2cwep3I/5zf9f97tNX/pOT//43a+v9oyfP/acn0/2jJ8/9oyfP/aMnz/2jJ
-        8/9oyfT/aMnz/2jJ8/9pyfP/aMnz/2jJ9P9pyfP/aMjy/1CArf9nZ2d4Z2dnUGdnZxgAAAAAAAAAAAAA
-        AAAAAAAAAAAAAMSpmf/ApJT/u5+N/2dnZxh7n8n/our+/4zZ8v97s9X/q+f//3PP9/9ry/X/bMv0/2vL
-        9P9sy/T/a8v0/2vL9f9ry/T/a8v1/2zL9f9ry/T/a8v1/2zL9f9ry/T/Y77m/4GZtv9nZ2doZ2dnMGdn
-        ZwgAAAAAAAAAAAAAAAAAAAAAZ2dnCGdnZxhnZ2cgZ2dnGHyhzP+i6///mOj+/3241P+f4/7/m+D9/2/N
-        9f9vzfb/bs32/2/N9v9vzfb/b831/27N9v9uzfb/b832/2/N9v9vzfb/b832/2/N9v9vzfb/VY+3/2dn
-        Z3hnZ2dYZ2dnKGdnZwgAAAAAAAAAAAAAAABnZ2cQZ2dnMGdnZ0BnZ2cwfKPN/63u//+Z6f//kuH4/3it
-        zv+p5v//f9X6/3LP9/9yz/f/cs/4/3LP+P9yz/f/cs/3/3LP9/9yz/f/cs/3/3LO9/9yz/f/cs/3/3LP
-        9/9tyfH/aoyx/2dnZ3hnZ2dQZ2dnGAAAAAAAAAAAAAAAAMSpmf/ApJT/vJ+N/2dnZxh+pc//s+7//5rq
-        //+X6P3/gr/b/5vi//+l5f//dtH5/3XR+P910fj/ddD5/3XR+f910fj/ddH4/3XQ+P910fj/ddH4/3XR
-        +f910fj/ddH5/3XR+P9hpc7/srzH/2dnZ2hnZ2cwZ2dnCAAAAAAAAAAAZ2dnCGdnZxhnZ2cgZ2dnGH+n
-        0v+38f//m+r//5rq//+W5vz/dbba/6Xl//+K2vz/eNL5/3jS+f930vr/d9L6/3fS+f930vr/d9L6/3fS
-        +f940vn/d9L5/3fS+v930fr/d9L5/3bR+P9gh7T/Z2dneGdnZ1BnZ2cYAAAAAAAAAABnZ2cQZ2dnMGdn
-        Z0BnZ2cwgKnT/7nw//+c6v//mur//5bn/f+F0/D/ic70/6nm//971Pv/edP6/3nT+v950/r/edP6/3nT
-        +v950/r/edP6/3nT+v950/r/edP6/3nT+v950/r/edP6/3C84/+brcD/Z2dnaGdnZzBnZ2cIAAAAAMSp
-        mf/ApZT/u56N/2dnZxiBq9X/uPD//5/r//+a6v//men+/5jo/v90ueH/oeT//5Ld/f950/r/edP6/3nT
-        +v950/r/edP6/3nT+v950/r/edP6/3nT+v950/r/edP6/3nT+v950/r/edP6/1aJvP9nZ2d4Z2dnUGdn
-        ZxgAAAAAZ2dnCGdnZxhnZ2cgZ2dnGIKs1/+58P//o+z//5fp//+Z6f//luf9/4ve9/+Qw+z/pOL9/67o
-        //+u6P//ruj//67o//+u6P//ruj//67o//+u6P//ruj//67o//+u6P//ruj//67o//+u6P//f8Hj/4+w
-        y/9nZ2dIZ2dnGAAAAABnZ2cQZ2dnMGdnZ0BnZ2cwg6/Z/7zx//+m7f//pez//5rq//+b6v//nev//4/X
-        +P+MuOP/jLjj/4q34/+Jt+P/iLfj/4a34/+Et+T/g7Xk/4C15f94ruX/eK7l/3iu5f94ruX/cKfe/2ih
-        1v9hmdT/davg/2dnZxhnZ2cIAAAAAMSpmf/BpJT/vJ+N/2dnZxiFst3/vfL//6rv//+o7v//qO3//6jt
-        //+l7P//oev//5np//+N5v//jOb//5fq//+V6f//kOf//4nk/f+I4fr/g9z4/4HZ9/981Pb/WIrE/2dn
-        Z0hnZ2cYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIaz3v++8v//qO///6fv
-        //+p7///qe7//6Xr//+f6///m+n//5zo//+j4/v/jcbw/4G25f+BtuX/f7Xl/3+15f94ruT/d63h/3Wx
-        5f+OxuP/Z2dnGGdnZwgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhrTf/7Pm
-        +v+x7///qO7//6zv//+s7v//p+///6Hs//+g6///peL6/46+6P+6ytn/Z2dnKGdnZwgAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AADD2e3/jb7l/7jr/P+/8v//wfL//8Ly//+/8f//tvD//6zm+v+Qwen/rsbd/2dnZyhnZ2cIAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAC00e3/jLjj/4y44/+LuOP/ibjj/4i34/+Ht+T/hrfk/7/U6P9nZ2cYZ2dnCAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAA////////////////8AAAP/AAAD/wAAA/8AAAP/AAAD/wAAA///A///AA
-        AP8AAAB/AAAAPwAAAD8AAAAfAAAAHwAAAA8AAAAHAAAABwAAAAMAAAADAAAAAQAAAAEAAAABAAAAAQAA
-        AD/wAAA/8AA///AAf//4AP////////////8=
+        AAABAAEAEBAAAAAAAABoBQAAFgAAACgAAAAQAAAAIAAAAAEACAAAAAAAAAEAAAAAAAAAAAAAAAEAAAAB
+        AAAAAAAAAACAAACAAAAAgIAAgAAAAIAAgACAgAAAwMDAAMDcwADwyqYABAQEAAgICAAMDAwAERERABYW
+        FgAcHBwAIiIiACkpKQBVVVUATU1NAEJCQgA5OTkAgHz/AFBQ/wCTANYA/+zMAMbW7wDW5+cAkKmtAAAA
+        MwAAAGYAAACZAAAAzAAAMwAAADMzAAAzZgAAM5kAADPMAAAz/wAAZgAAAGYzAABmZgAAZpkAAGbMAABm
+        /wAAmQAAAJkzAACZZgAAmZkAAJnMAACZ/wAAzAAAAMwzAADMZgAAzJkAAMzMAADM/wAA/2YAAP+ZAAD/
+        zAAzAAAAMwAzADMAZgAzAJkAMwDMADMA/wAzMwAAMzMzADMzZgAzM5kAMzPMADMz/wAzZgAAM2YzADNm
+        ZgAzZpkAM2bMADNm/wAzmQAAM5kzADOZZgAzmZkAM5nMADOZ/wAzzAAAM8wzADPMZgAzzJkAM8zMADPM
+        /wAz/zMAM/9mADP/mQAz/8wAM///AGYAAABmADMAZgBmAGYAmQBmAMwAZgD/AGYzAABmMzMAZjNmAGYz
+        mQBmM8wAZjP/AGZmAABmZjMAZmZmAGZmmQBmZswAZpkAAGaZMwBmmWYAZpmZAGaZzABmmf8AZswAAGbM
+        MwBmzJkAZszMAGbM/wBm/wAAZv8zAGb/mQBm/8wAzAD/AP8AzACZmQAAmTOZAJkAmQCZAMwAmQAAAJkz
+        MwCZAGYAmTPMAJkA/wCZZgAAmWYzAJkzZgCZZpkAmWbMAJkz/wCZmTMAmZlmAJmZmQCZmcwAmZn/AJnM
+        AACZzDMAZsxmAJnMmQCZzMwAmcz/AJn/AACZ/zMAmcxmAJn/mQCZ/8wAmf//AMwAAACZADMAzABmAMwA
+        mQDMAMwAmTMAAMwzMwDMM2YAzDOZAMwzzADMM/8AzGYAAMxmMwCZZmYAzGaZAMxmzACZZv8AzJkAAMyZ
+        MwDMmWYAzJmZAMyZzADMmf8AzMwAAMzMMwDMzGYAzMyZAMzMzADMzP8AzP8AAMz/MwCZ/2YAzP+ZAMz/
+        zADM//8AzAAzAP8AZgD/AJkAzDMAAP8zMwD/M2YA/zOZAP8zzAD/M/8A/2YAAP9mMwDMZmYA/2aZAP9m
+        zADMZv8A/5kAAP+ZMwD/mWYA/5mZAP+ZzAD/mf8A/8wAAP/MMwD/zGYA/8yZAP/MzAD/zP8A//8zAMz/
+        ZgD//5kA///MAGZm/wBm/2YAZv//AP9mZgD/Zv8A//9mACEApQBfX18Ad3d3AIaGhgCWlpYAy8vLALKy
+        sgDX19cA3d3dAOPj4wDq6uoA8fHxAPj4+ADw+/8ApKCgAICAgAAAAP8AAP8AAAD//wD/AAAA/wD/AP//
+        AAD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//////////////////////xcXFxf/
+        zMzMzP/IyMjI//8XFxcX/8zMzMz/yMjIyP//FxcXF//MzMzM/8jIyMj//xcXFxf/zMzMzP/IyMjI//8X
+        FxcX/8zMzMz/yMjIyP///////////////////////0VFRUX/UVFRUf+GhoaG//9FRUVF/1FRUVH/hoaG
+        hv//RUVFRf9RUVFR/4aGhob//0VFRUX/UVFRUf+GhoaG//9FRUVF/1FRUVH/hoaGhv//////////////
+        ////////AAAAAAAAAAAAAAAAAAAAAP//AAD//wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//AAA=
 </value>
+  </data>
+  <data name="OptionsMenuItem.Title" xml:space="preserve">
+    <value>Op&amp;ções</value>
   </data>
   <data name="CloseMenuItem.HotkeyText" xml:space="preserve">
     <value>F</value>
