--- a/trunk/src/WaveletStudio/Properties/Resources.resx
+++ b/trunk/src/WaveletStudio/Properties/Resources.resx
@@ -433,11 +433,17 @@ Click in the Signal tab and select a signal source.</value>
   <data name="ApproximationLevel" xml:space="preserve">
     <value>Approximation Level</value>
   </data>
+  <data name="Binary" xml:space="preserve">
+    <value>Binary</value>
+  </data>
   <data name="Convolution" xml:space="preserve">
     <value>Convolution</value>
   </data>
   <data name="ConvolutionDescription" xml:space="preserve">
     <value>Compute convolution of two inputs</value>
+  </data>
+  <data name="Cosine" xml:space="preserve">
+    <value>Cosine</value>
   </data>
   <data name="DemuxDescription" xml:space="preserve">
     <value>Extract and output elements of vector signal.</value>
@@ -447,6 +453,9 @@ Click in the Signal tab and select a signal source.</value>
   </data>
   <data name="DetailsLevel" xml:space="preserve">
     <value>Details Level</value>
+  </data>
+  <data name="Divide" xml:space="preserve">
+    <value>Divide</value>
   </data>
   <data name="Downsample" xml:space="preserve">
     <value>Downsample</value>
@@ -462,6 +471,12 @@ Click in the Signal tab and select a signal source.</value>
   </data>
   <data name="ExportToCSVDescription" xml:space="preserve">
     <value>Exports a signal to a CSV file</value>
+  </data>
+  <data name="Extend" xml:space="preserve">
+    <value>Extend</value>
+  </data>
+  <data name="ExtendDescription" xml:space="preserve">
+    <value>Extends a signal using the specified mode</value>
   </data>
   <data name="FFTDescription" xml:space="preserve">
     <value>Compute fast Fourier transform (FFT) of input.</value>
@@ -479,7 +494,7 @@ Click in the Signal tab and select a signal source.</value>
     <value>Compute inverse fast Fourier transform (IFFT) of input.</value>
   </data>
   <data name="ImportFromCSV" xml:space="preserve">
-    <value>Import from CSV</value>
+    <value>Import CSV</value>
   </data>
   <data name="ImportFromCSVDescription" xml:space="preserve">
     <value>Generates a signal based on a CSV file.</value>
@@ -487,17 +502,104 @@ Click in the Signal tab and select a signal source.</value>
   <data name="Input" xml:space="preserve">
     <value>Input</value>
   </data>
+  <data name="Interpolate" xml:space="preserve">
+    <value>Interpolate</value>
+  </data>
+  <data name="InterpolateDescription" xml:space="preserve">
+    <value>Performs an interpolation in a signal</value>
+  </data>
+  <data name="Invert" xml:space="preserve">
+    <value>Invert</value>
+  </data>
+  <data name="InvertDescription" xml:space="preserve">
+    <value>Invert a signal.</value>
+  </data>
   <data name="Line" xml:space="preserve">
     <value>Line</value>
   </data>
+  <data name="Multiply" xml:space="preserve">
+    <value>Multiply</value>
+  </data>
+  <data name="MuxDescription" xml:space="preserve">
+    <value>Extract and output elements of vector signal.</value>
+  </data>
+  <data name="NormalDescription" xml:space="preserve">
+    <value>Gets the normal distribution of a signal.</value>
+  </data>
+  <data name="OperationBlockDescription" xml:space="preserve">
+    <value>Sum, subtract, multiply or divide two signals.</value>
+  </data>
+  <data name="Ramp" xml:space="preserve">
+    <value>Ramp</value>
+  </data>
+  <data name="RampDescription" xml:space="preserve">
+    <value>Generates a Ramp Function</value>
+  </data>
   <data name="Reconstruction" xml:space="preserve">
     <value>Reconstruction</value>
+  </data>
+  <data name="Repeat" xml:space="preserve">
+    <value>Repeat</value>
+  </data>
+  <data name="RepeatDescription" xml:space="preserve">
+    <value>Repeats parts of a signal.</value>
+  </data>
+  <data name="Sawtooth" xml:space="preserve">
+    <value>Sawtooth</value>
+  </data>
+  <data name="Scalar" xml:space="preserve">
+    <value>Scalar</value>
+  </data>
+  <data name="ScalarDescription" xml:space="preserve">
+    <value>Multiply, add or subtract or divide the samples of a signal by a scalar number.</value>
+  </data>
+  <data name="Shift" xml:space="preserve">
+    <value>Shift</value>
+  </data>
+  <data name="ShiftDescription" xml:space="preserve">
+    <value>Shift signal.</value>
+  </data>
+  <data name="Sine" xml:space="preserve">
+    <value>Sine</value>
+  </data>
+  <data name="Square" xml:space="preserve">
+    <value>Square</value>
+  </data>
+  <data name="Subtract" xml:space="preserve">
+    <value>Subtract</value>
+  </data>
+  <data name="Sum" xml:space="preserve">
+    <value>Sum</value>
+  </data>
+  <data name="Switch" xml:space="preserve">
+    <value>Switch</value>
+  </data>
+  <data name="SwitchDescription" xml:space="preserve">
+    <value>Switch output between first input and third input based on value of second input or the threshold value.</value>
   </data>
   <data name="TemplateNotFound" xml:space="preserve">
     <value>The template {0} does not exist.</value>
   </data>
   <data name="TextBlockDescription" xml:space="preserve">
     <value>Generates a signal based on a text.</value>
+  </data>
+  <data name="Triangle" xml:space="preserve">
+    <value>Triangle</value>
+  </data>
+  <data name="Unique" xml:space="preserve">
+    <value>Unique</value>
+  </data>
+  <data name="UniqueDescription" xml:space="preserve">
+    <value>Removes the duplicated samples in a signal.</value>
+  </data>
+  <data name="Upsample" xml:space="preserve">
+    <value>Upsample</value>
+  </data>
+  <data name="UpsampleDescription" xml:space="preserve">
+    <value>Resample input at higher rate by inserting zeros.</value>
+  </data>
+  <data name="WaveletDescription" xml:space="preserve">
+    <value>Wavelet decomposition using the Discreete Wavelet Transform (DWT).</value>
   </data>
   <data name="WaveletNameNotFound" xml:space="preserve">
     <value>The wavelet {0} does not exist.</value>
