--- a/trunk/src/WaveletStudio.Designer/Properties/Resources.resx
+++ b/trunk/src/WaveletStudio.Designer/Properties/Resources.resx
@@ -613,4 +613,10 @@ Portuguese (Brazil)</value>
   <data name="icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="imgScaleBlock" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgscale.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imgScaleBlockMini" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgscalemini.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
